<resources>
    <string name="app_name">DeCare</string>
    <string name="articles">Articles</string>
    <string name="home">Home</string>

    <string name="greeting_placeholder">Selamat Datang, %s</string>
    <string name="how_are_you">Bagaimana Kabarmu?</string>
    <string name="our_features">Fitur Kami</string>
    <string name="early_detection">Deteksi Dini</string>
    <string name="schedule">Jadwal Kegiatan</string>
    <string name="exercise">Olahraga</string>
    <string name="application_guide">Panduan Aplikasi</string>
    <string name="google_logo">Google Logo</string>
    <string name="sign_in">Sign In</string>
    <string name="information">Informasi</string>
    <string name="information_1">Pada test ini user akan melakukan test pendeteksian dini penyakit demensia menggunakan screening MMSE.</string>
    <string name="information_2">Data user dan hasil test MMSE akan dianalisis dan dilakukan proses prediksi Machine Learning.</string>
    <string name="information_3">User yang akan melakukan test membutuhkan 1 orang pendamping sebagai caregiver/validator.</string>
    <string name="information_4">Tugas caregiver/validator adalah membantu user dalam melakukan test tanpa memberi jawaban kepada user.</string>
    <string name="information_5">Setelah user selesai mengerjakan test, caregiver/validator memeriksa beberapa jawaban user yang harus diperiksa secara manual.</string>
    <string name="instruction">Instruksi</string>
    <string name="instruction_1">User dan Caregiver memahami informasi dan instruksi pada test sebelum memulai ujian.</string>
    <string name="instruction_2">User memasukkan data pengguna yang dibutuhkan untuk prediksi Machine Learning.</string>
    <string name="instruction_3">User melakukan test pada aplikasi, caregiver/validator mendampingi proses ujian user.</string>
    <string name="instruction_4">User selesai melakukan test, caregiver/validator memeriksa jawaban user.</string>
    <string name="instruction_5">Hasil test MMSE ditampilkan.</string>
    <string name="instruction_6">User atau Caregiver menekan tombol prediksi Machine Learning.</string>
    <string name="instruction_7">Hasil prediksi Machine Learning ditampilkan pada aplikasi.</string>
    <string name="instruction_8">Aplikasi memberikan saran dan informasi dari hasil test.</string>
    <string name="start_exam">Mulai Ujian</string>
    <string name="next">Selanjutnya</string>
    <string name="name">Nama</string>
    <string name="age">Usia</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="educ">Pendidikan terakhir</string>
    <string name="ses">Tingkat Sosial Ekonomi</string>
    <string name="question_count_placeholder">Pertanyaan ke %d dari 11</string>
    <string name="question1_orientation">Jam berapa sekarang  ?</string>
    <string name="question2_orientation">Hari apa sekarang ?</string>
    <string name="question3_orientation">Tanggal berapa sekarang ?</string>
    <string name="question4_orientation">Bulan apa sekarang ?</string>
    <string name="question5_orientation">Tahun berapa sekarang ?</string>
    <string name="question1_helper_orientation">Contoh: 15:30</string>
    <string name="question2_helper_orientation">Contoh: Senin</string>
    <string name="question3_helper_orientation">Contoh: 17</string>
    <string name="question4_helper_orientation">Contoh: Januari</string>
    <string name="question5_helper_orientation">Contoh: 2021</string>
    <string name="question1_registration">Dengarkan suara ini dan sebutkan 3 obyek tersebut secara urut</string>
    <string name="play_audio">Putar Suara</string>
    <string name="first_object">Obyek pertama</string>
    <string name="second_object">Obyek kedua</string>
    <string name="third_object">Obyek ketiga</string>
    <string name="question6_registration">Di negara mana anda tinggal ?</string>
    <string name="question6_helper_registration">Contoh: Amerika</string>
    <string name="question7_registration">Di provinsi mana anda tinggal ?</string>
    <string name="question7_helper_registration">Contoh: Jawa Timur</string>
    <string name="question8_registration">Di Kota mana anda tinggal ?</string>
    <string name="question8_helper_registration">Contoh: Surabaya</string>
    <string name="question9_registration">Di kecamatan mana anda tinggal ?</string>
    <string name="question9_helper_registration">Contoh: Tegalsari</string>
    <string name="question10_registration">Di kelurahan mana anda tinggal ?</string>
    <string name="question10_helper_registration">Contoh: Dr. Sutomo</string>
    <string name="question_attraction_and_calculation">Eja kata \"WAHYU\" dari belakang</string>
    <string name="answer">Jawaban</string>
    <string name="question_recall">Sebut 3 obyek yang ada pada soal nomor 3</string>
    <string name="question_bahasa">Sebutkan nama dari 2 benda pada foto diatas</string>
    <string name="question_bahasa_5_kata">Dengarkan suara dengan cara tekan tombol di atas, kemudian tuliskan 5 kata yang anda dengar secara urut</string>
    <string name="question_number_eight">Lakukan 3 perintah seperti di bawah ini:</string>
    <string name="press_this_button">Tekan tombol ini</string>
    <string name="question_number_10">Tulis sebuah kalimat lengkap yang memiliki subject dan predikat</string>
    <string name="question_number_11">Ikutilah Gambar diatas</string>
    <string name="finish_test">Selesaikan Ujian</string>
    <string name="clicked_button">Tombol ini telah ditekan</string>
    <string name="score">Nilai</string>
    <string name="check_patient_score">Periksa Nilai Pasien</string>
    <string name="predict">Lakukan Prediksi</string>
    <string name="image_splashscreen">Image Splashscreen</string>
    <string name="empty">Form tidak boleh kosong</string>
    <string name="input_data">Masukkan Data</string>
    <string name="reminder">Ingatlah ketiga obyek ini sampai akhir ujian</string>
    <string name="profile">Data Diri</string>
    <string name="yoga_exercise">Mari Latihan Yoga bersama DeCare!</string>
    <string name="start_yoga">Mulai Yoga</string>
    <string name="finish_yoga">Selesai Yoga</string>
    <string name="email">Email</string>
    <string name="sign_out">Sign Out</string>
    <string name="article">Artikel</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="_07_00">07:00</string>
    <string name="one_time">One Time</string>
    <string name="status">Status</string>
    <string name="submit">Submit</string>
    <string name="repeat">Repeat</string>
    <string name="type">Type</string>
    <string name="time">Time</string>
    <string name="status_on_off">Status on/off</string>
    <string name="reminder_title">Reminder Title</string>
    <string name="change">Ubah</string>
    <string name="update">Update</string>
    <string name="add">Tambah</string>
    <string name="save">Simpan</string>
    <string name="delete">Hapus</string>
    <string name="cancel">Batal</string>
    <string name="message_cancel">Apakah anda ingin membatalkan perubahan pada form?</string>
    <string name="message_delete">Apakah anda yakin ingin menghapus item ini?</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="added">Satu item berhasil ditambahkan</string>
    <string name="changed">Satu item berhasil diubah</string>
    <string name="deleted">Satu item berhasil dihapus</string>
    <string name="validator_page">Halaman Validator</string>
    <string name="early_detection_demensia">Deteksi Dini Demensia</string>
    <string name="test_result_greeting">Selamat! %s telah menyelesaikan ujian MMSE dengan nilai :</string>
    <string name="back_to_home">Kembali ke Beranda</string>
    <string name="error_next_question">Harap ikuti instruksi sebelum lanjut ke soal berikutnya</string>
    <string name="_30">/30</string>
    <string name="result_prediction">Hasil Prediksi:</string>
    <string name="not_found">Tidak ada data</string>
    <string name="warning">Peringatan</string>
    <string name="back">Kembali</string>
    <string name="back_message">Ujian MMSE sedang berlangsung, jika anda menekan tombol \'Kembali\' maka ujian akan dihentikan</string>
    <string name="validator_message">Untuk melanjutkan proses deteksi dini, silahkan berikan gawai ini ke validator anda.</string>
    <string name="validator_message_title">Halaman ini khusus untuk validator</string>
    <string name="test_result_placeholder">%s (%s %s)</string>
    <string name="request_timeout">Terjadi kesalahan, silahkan coba lagi</string>
    <string name="dementia_care">Dementia Care</string>
    <string name="app">App</string>
    <string name="early_detection_success">Deteksi dini berhasil</string>
    <string name="reminder_feature">Jadwal</string>
</resources>